--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       </select>
     </div>
     <div>
-      <button value="cancel" formmethod="dialog">Cancel</button>
+      <button value="cancel" id="close-dialog">Cancel</button>
       <button id="confirm-btn" value="default">Confirm</button>
     </div>
   </form>
