Add a button for resetting the form

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <button id="new-book-btn">Add New Book</button>
 </div>
 <dialog id="add-book-dialog">
-  <form>
+  <form id="add-book-form">
     <div>
       <label for="title">Book Title:</label>
       <input type="text" id="title" name="title" autofocus>
@@ -46,6 +46,7 @@
     </div>
     <div>
       <button value="cancel" id="close-dialog">Cancel</button>
+      <button id="clear-btn" value="clear">Clear</button>
       <button id="confirm-btn" value="default">Confirm</button>
     </div>
   </form>
