--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <input type="number" id="pages" name="pages">
     </div>
     <div>
-      <label for="rating">Rating</label>
+      <label for="rating">Rating:</label>
       <input type="number" id="rating" name="rating">
     </div>
     <div>
