Style all button elements

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <h1> My Book Library</h1>
 
 <div>
-  <button id="new-book-btn">Add New Book</button>
+  <button id="new-book-btn" class="btn">Add New Book</button>
 </div>
 <dialog id="add-book-dialog">
   <form id="add-book-form">
@@ -45,9 +45,9 @@
       </select>
     </div>
     <div>
-      <button value="cancel" id="close-dialog">Cancel</button>
-      <button id="clear-btn" value="clear">Clear</button>
-      <button id="confirm-btn" value="default">Confirm</button>
+      <button value="cancel" id="close-dialog" class="btn">Cancel</button>
+      <button id="clear-btn" class="btn" value="clear">Clear</button>
+      <button id="confirm-btn" class="btn" value="default">Confirm</button>
     </div>
   </form>
 </dialog>
