Style all the buttons accordingly

--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
       </select>
     </div>
     <div>
-      <button value="cancel" id="close-dialog" class="btn">Cancel</button>
-      <button id="clear-btn" class="btn" value="clear">Clear</button>
-      <button id="confirm-btn" class="btn" value="default">Confirm</button>
+      <button value="cancel" id="close-dialog" class="btn cncl-btn">Cancel</button>
+      <button id="clear-btn" class="btn clr-btn" value="clear">Clear</button>
+      <button id="confirm-btn" class="btn cnfm-btn" value="default">Confirm</button>
     </div>
   </form>
 </dialog>
